# robot_face_sim

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt
robot_face_sim/: config.py  constants.py
robot_face_sim/app/: controls.py  debug_overlay.py  simulator.py
robot_face_sim/audio/: base.py  fake_audio.py
robot_face_sim/core/: __init__.py  behavior_pools.py  clips.py  dirty_rect.py  easing.py  idle_controller.py  scheduler.py  shape_clips.py  state_machine.py  timeline.py  types.py
robot_face_sim/render/: eye_shape.py  pygame_renderer.py
robot_face_sim/wakeword/: base.py  fake_detector.py
